--- a/packages/ckeditor5-html-embed/package.json
+++ b/packages/ckeditor5-html-embed/package.json
@@ -12,7 +12,15 @@
   ],
   "main": "src/index.ts",
   "dependencies": {
-    "ckeditor5": "40.0.0"
+    "ckeditor5": "40.0.0",
+    "@codemirror/lang-html": "^6.0.0",
+    "@codemirror/autocomplete": "^6.0.0",
+    "@codemirror/commands": "^6.0.0",
+    "@codemirror/language": "^6.0.0",
+    "@codemirror/lint": "^6.0.0",
+    "@codemirror/search": "^6.0.0",
+    "@codemirror/state": "^6.0.0",
+    "@codemirror/view": "^6.0.0"
   },
   "devDependencies": {
     "@ckeditor/ckeditor5-basic-styles": "40.0.0",
